# api-router-rust

./: Cargo.toml  README.md
express-benchmark/: backend.js  benchmark-weather.js  benchmark.js  package-lock.json  package.json  run-benchmark.sh  run-python-benchmark.sh  run-tests.sh  run-weather-benchmark.sh  server.js  start-services.sh  test-proxy.js  test-route.js  weather-api.js  weather-benchmark.py  weather-proxy.js
nextjs-comparison/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
nextjs-comparison/app/: page.tsx
nextjs-comparison/app/api/: route.ts
nextjs-comparison/app/api/complex/[...params]/: route.ts
nextjs-comparison/app/api/users/: route.ts
nextjs-comparison/app/api/users/[userId]/: route.ts
nextjs-comparison/app/api/users/[userId]/posts/[postId]/: route.ts
nextjs-comparison/benchmark/: analyze.ts  comprehensive.ts  config.ts  load-generator.ts  run.ts  types.ts
nextjs-comparison/results/: README.md
nextjs-comparison/scripts/: init.sh
results/: benchmark_comparison_request-batching_20241120_204908.yaml  feature_history.yaml
router-results/: comprehensive-analysis.md  final-analysis.md  zap-vs-express.md  zap-vs-python.md
scripts/: benchmark_compare.py  cleanup_features.py  proxy_benchmark.py  run_benchmark_test.sh
sdk/: README.md
sdk/adapters/: README.md
sdk/core/: README.md
sdk/parser/: README.md
sdk/transport/: README.md
sdk/utils/: README.md
src/: lib.rs  main.rs  main_batched.rs
src/benchmarks/: README.md
src/proxy/: decorator.rs  handler.rs  middleware.rs  mod.rs  parser.rs  pool.rs  types.rs
src/router/: README.md  mod.rs
