[package]
name = "rust-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
regex = "1.5"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tower = { version = "0.4", features = ["full"] }
bytes = "1.0"
rand = "0.8"
http = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"

[features]
default = []
batched = []

[[bin]]
name = "rust-router"
path = "src/main.rs"

[[bin]]
name = "rust-router-batched"
path = "src/main_batched.rs"
required-features = ["batched"]

[lib]
name = "rust_router"
path = "src/lib.rs"
