[package]
name = "api-router-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
http = "0.2"
chrono = "0.4"
futures = "0.3"
regex = "1.10"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
hyper-tls = "0.5"

[lib]
name = "api_router_rust"
path = "src/lib.rs"

[[bin]]
name = "api_router_rust"
path = "src/main.rs"
